--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cisf"
-, "version": "1.2.3"
+, "version": "1.2.4"
 , "description": "Support for Simple Runtime Assertions in JavaScript."
-, "main" :  "CISF.js"
+, "main" :  "cisf.js"
 ,
   "scripts": {
     "test": "node test.js"
